style: 修复ip比较错误

--- a/source/src/Makefile
+++ b/source/src/Makefile
@@ -13,7 +13,7 @@ OBHS += $(PRIVATE_COM_CODE)
 
 $(TARGET):$(OBHS:.c=.o)
 	$(CC) -o $(OUTDIR)/$@ $^ $(FLAG) $(PRIVATE_FLAG) $(INCLUDES) $(LIBS)
-	mv *.o $(OUTDIR)
+	mv *.o *.gc* $(OUTDIR)
 
 %.o:%.c
 	make build
@@ -28,6 +28,7 @@ $(OUTDIR)/demo.o:build
 
 clean: 
 	rm -rf $(OUTDIR)/$(TARGET)
+	rm -rf $(OUTDIR)/demo
 
 build:
 	if [ ! -d ${OUTDIR} ]; then install -d ${OUTDIR}; fi
@@ -40,14 +41,15 @@ test: build
 	$(OUTDIR)/test --fork
 
 demo: 
-	make &&	cd $(OUTDIR) &&	$(CC) -o $(OUTDIR)/demo $(CUTDIR)/demo.C $^ $(OBHS:.c=.o) $(INCLUDES) $(LIBS)
+	make
+	cd $(OUTDIR) &&	$(CC) -o $(OUTDIR)/demo $(CUTDIR)/demo.C $^ $(OBHS:.c=.o) $(INCLUDES) $(LIBS) $(FLAG)
 	echo "usg: $(OUTDIR)/demo '(src_port=481)' unittest/1.pcap"
 
 memcheck: demo
 	valgrind --leak-check=full --show-reachable=yes --trace-children=yes --log-file="$(OUTDIR)/valgrind_log.txt" $(OUTDIR)/demo  '(src_port=481)' unittest/1.pcap && cat $(OUTDIR)/valgrind_log.txt
 
 lcov:
-	lcov -d $(OUTDIR)/ -t 'demo' -o 'demo.info' -b $(OUTDIR)/. -c
+	lcov -d $(OUTDIR)/ -t 'demo' -o 'demo.info' -b . -c
 	genhtml -o $(OUTDIR)/demo_web demo.info
 
 .PHONY: def clean test memcheck lcov build demo
