--- a/tools/xtest/Makefile
+++ b/tools/xtest/Makefile
@@ -7,12 +7,13 @@ LIBS	= -Llibxtest -lxtest -ldl
 CFLAGS	= $(FLAG) -Wall $(DEFIN)
 TARGET	= xtest
 
+OUTDIR ?= _out
+
 .PHONY: all clean cleanall libxtest
 
 $(TARGET): $(OBJS) libxtest
 	if [ ! -d ${OUTDIR} ]; then install -d ${OUTDIR}; fi
 	gcc $(CFLAGS) -o $(OUTDIR)/$(TARGET) $(OBJS) $(LIBS)
-	mv -f *.gc* $(OUTDIR)
 
 libxtest:
 	(cd libxtest && make)
@@ -22,7 +23,7 @@ debug:
 
 clean:
 	(cd libxtest && make clean)
-	rm -f *.o *.output *.stackdump $(OUTDIR)/$(TARGET)
+	rm -f *.o *.output *.stackdump $(OUTDIR)/$(TARGET) 
 
 install:
 	(cd libxtest && make install)
